task 5 - authentication complete; project completegit add .

--- a/.env.local
+++ b/.env.local
@@ -6,3 +6,5 @@ POSTGRES_USER="default"
 POSTGRES_HOST="ep-jolly-darkness-a4buyugp-pooler.us-east-1.aws.neon.tech"
 POSTGRES_PASSWORD="ytAQcE1Fo3wd"
 POSTGRES_DATABASE="verceldb"
+
+AUTH_SECRET="26xVTJkEyNMWd3TqAn5z2V9YYjALgIy+qnegTOUfud4=" # Added by `npx auth`. Read more: https://cli.authjs.dev
